--- a/Mongo/Mongo.Services.CupomApi/appsettings.json
+++ b/Mongo/Mongo.Services.CupomApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-FS2K7LU;Database=cupom_dbo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
