Controller de Cupom (Ajustar para Service) Base Service, CupomService como HttpClient

--- a/Mongo/Mongo.Web/appsettings.json
+++ b/Mongo/Mongo.Web/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ServiceUrls":{
+    "CupomApi": "https://localhost:7267"
+  },
+
   "AllowedHosts": "*"
 }
