--- a/Mongo/Mongo.Services.Auth/appsettings.json
+++ b/Mongo/Mongo.Services.Auth/appsettings.json
@@ -3,11 +3,17 @@
     "DefaultConnection": "Server=DESKTOP-FS2K7LU;Database=AuthEcommerce;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
 
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "JwtOptions": {
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+      "Issuer": "mango-auth-api",
+      "Audience": "mango-client"
+    },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
