feature : Interface e servico TokenProvider

--- a/Mongo/Mongo.Web/appsettings.json
+++ b/Mongo/Mongo.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
 
   "ServiceUrls":{
-    "CupomApi": "https://localhost:7267"
+    "CupomApi": "https://localhost:7267",
+    "AuthAPI": "https://localhost:7002"
   },
 
   "AllowedHosts": "*"
