feature/ Auth and Cupom Jwt

--- a/Mongo/Mongo.Services.CupomApi/appsettings.json
+++ b/Mongo/Mongo.Services.CupomApi/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "JwtOptions": {
+    "Secret": "1234567891011121314151617181920212223",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
+  },
+
   "AllowedHosts": "*"
 }
