--- a/Mongo/Mongo.Services.Auth/appsettings.json
+++ b/Mongo/Mongo.Services.Auth/appsettings.json
@@ -4,7 +4,7 @@
   },
 
     "JwtOptions": {
-      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+      "Secret": "1234567891011121314151617181920212223",
       "Issuer": "mango-auth-api",
       "Audience": "mango-client"
     },
