--- a/Mongo/Mongo.Web/appsettings.json
+++ b/Mongo/Mongo.Web/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
 
+  "JwtOptions": {
+    "Secret": "1234567891011121314151617181920212223",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
+  },
+
   "ServiceUrls":{
     "CupomApi": "https://localhost:7267",
     "AuthAPI": "https://localhost:7002"
