Produto Orion Design

--- a/Mongo/Mongo.Services.Products/appsettings.json
+++ b/Mongo/Mongo.Services.Products/appsettings.json
@@ -1,9 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-FS2K7LU;Database=product_dbo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "JwtOptions": {
+    "Secret": "1234567891011121314151617181920212223",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
   },
   "AllowedHosts": "*"
 }
